# LCPL-Language-Parser

./: CMakeLists.txt  Makefile  README.md  compare.sh  lcpl.l  lcpl.y
lcpl-AST/: CMakeLists.txt
lcpl-AST/include/: Assignment.h  Class.h  Expression.h  Method.h
lcpl-AST/include/rapidjson/: writer.h
lcpl-AST/src/: ASTSerialization.cpp
test/: factorial.lcpl.ast  hello.lcpl.ast  simple.lcpl  simple.lcpl.ast
tests/advanced/: attributes-overload.lcpl  attributes-overload.lcpl.ast  attributes2.lcpl.ast  censor.lcpl.ast  cons2.ast.ref  io.ast.ref  let1.lcpl.ast  math-expressions.lcpl.ast  shapes.lcpl  shapes.lcpl.ast  stack.ast.ref  stack.lcpl  string-conv.ast.ref  string-conv.lcpl  string-search-zero.ast.ref  string.ast.ref  strlit.ast.ref
tests/complex/: compiler.lcpl  compiler.lcpl.ast  database.lcpl  database.lcpl.ast
tests/simple/: attributes3.ast.ref  cast2.lcpl  cast2.lcpl.ast  cons.ast.ref  dispatch-shape.lcpl.ast  dispatch-shape2.lcpl.ast  expr-statements.ast.ref  expressions.ast.ref  locals.lcpl.ast  overload.lcpl.ast  sl-comments.lcpl.ast  snippets.lcpl.ast  statements.ast.ref
